--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.17",
-    "axios": "^1.6.8",
+    "axios": "^1.7.0",
     "firebase": "^10.9.0",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
