--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "node server.js",
+    "server": "nodemon server.js",
     "client": "cd client && npm start",
     "build": "cd client && npm run build"
   },
@@ -20,9 +20,11 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.3",
     "firebase": "^10.8.1",
+    "nodemon": "^3.1.4",
     "openai": "^4.27.0",
     "postcss-cli": "^11.0.0",
     "postmark": "^4.0.2",
+    "stripe": "^15.10.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
